# SentinelGuard-SDK

./: .gitignore  CMakeLists.txt  README.md
core/: SentinelCore.h
examples/: Hardware_Integration_Demo.cpp
github/workflows/: cpp-build.yml (Auto-Test)
include/: AA_BlackBox.h  AA_Network.h
src/: AA_Auth.cpp  AA_BlackBox.cpp  AA_Geofence.cpp  AA_Network.cpp  AegisCore.cpp
